# opigen

./: .gitignore  README.md  backup_spec.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-container.yml
config/: backup.toml
src/backup/: __init__.py  __main__.py  cli.py  config.py  docker_client.py  health.py  json_logging.py  labels.py  metrics.py  orchestrator.py  restic.py  restore.py  scheduler.py  state.py  volumes.py
tests/: __init__.py  conftest.py  fakes.py  test_config_labels_volumes.py  test_docker_client.py  test_health_metrics.py  test_integration_docker_backup.py  test_orchestrator.py  test_restic_scheduler.py  test_restore.py
