[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opigen-backup"
version = "0.1.0"
description = "Docker volume backup orchestrator using restic"
requires-python = ">=3.13"
dependencies = [
  "docker",
  "structlog",
  "typer"
]

[project.scripts]
backup = "backup.cli:main"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require a host Docker daemon"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ARG"]
